<resources>
    <string name="app_name">易合工</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_count">工作天数：%d天</string>
    <string name="work_count">完成总量：%d件</string>
    <string name="hint_user_name">用户名</string>
    <string name="hint_password">密码</string>

    <string name="login_name">登录名：</string>
    <string name="name">姓  名：</string>
    <string name="sex">性  别：</string>
    <string name="modify_password">修改密码</string>
    <string name="notification_mesage">通知消息</string>
    <string name="about_and_help">关于软件和帮助</string>
    <string name="logout">退出登录</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="old_pwd">原  密  码：</string>
    <string name="new_pwd">新  密  码：</string>
    <string name="confirm_pwd">确认密码：</string>
    <string name="tips_work_record">提示：\n点击日期填写工作日报\n点击年月修改日期\n只能填写今天之前的工作日报</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="tips_add_day_record">提交日报后如需修改，需提请修改审核，请核对无误后提交！</string>
    <string name="tips_no_select_result">无查询结果！</string>
</resources>
