<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zzu.gfms.activity.ModifyPwdActivity"
    android:orientation="vertical"
    android:background="@color/bar_divider">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height">

    </com.qmuiteam.qmui.widget.QMUITopBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_pwd"/>
        <EditText
            android:id="@+id/edit_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="20"
            android:digits="@string/digits"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="1px"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pwd"/>
        <EditText
            android:id="@+id/edit_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="20"
            android:digits="@string/digits"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="1px"
        android:background="#ffffff"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pwd"/>
        <EditText
            android:id="@+id/edit_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="20"
            android:digits="@string/digits"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="密码由6-20位字母、数字或其组合组成"
        android:layout_marginTop="5dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/text_confirm"
        style="@style/CommonButtonBar"
        android:layout_marginTop="20dp"
        android:text="确认修改"/>

</LinearLayout>
