<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zzu.gfms.activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="26sp"
        android:text="易合工管理系统" />

    <TextView
        android:id="@+id/text_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="员工端" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:theme="@style/MyEditText">

        <EditText
            android:id="@+id/edit_text_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:drawableLeft="@mipmap/icon_user"
            android:drawableStart="@mipmap/icon_user"
            android:drawablePadding="5dp"
            android:hint="@string/hint_user_name"
            android:imeOptions="actionNext"
            android:imeActionLabel="下一项"
            android:maxLines="1"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/checkbox"
        android:theme="@style/MyEditText">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/icon_password"
            android:drawableStart="@mipmap/icon_password"
            android:drawablePadding="6dp"
            android:hint="@string/hint_password"
            android:maxLines="1"
            android:maxLength="20"
            android:imeOptions="actionDone"
            android:imeActionLabel="登录"
            android:digits="@string/digits"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        style="@style/CommonButtonBar"
        android:onClick="onClick"
        android:text="登录"/>

</LinearLayout>
